Teste unitário das Models concluído
Integração do Junit e desenvolvimento dos testes unitários das classes petecentes a model concluidos.